[project]
name = "BCN"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Fangzhou Xiao", email = "xiaofangzhou@westlake.edu.cn"},
]
dependencies = [
    "numpy>=2.2.3",
    "scipy>=1.15.2",
    "sympy>=1.13.3",
    "cvxpy>=1.6.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
